# agentic-text-to-sql

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  tasks.ps1
.claude/: settings.json
.claude/agents/: eval-runner.md  schema-explorer.md  sql-guardian.md  test-author.md
.claude/skills/eval-methodology/: SKILL.md
.claude/skills/sql-generation-contract/: SKILL.md
.github/workflows/: ci.yml
data/eval/: .gitkeep  gold.yaml
data/seed/: .gitkeep
data/semantic/: .gitkeep  semantic_layer.yaml
dbt/: README.md  dbt_project.yml  profiles.yml
dbt/models/marts/: _marts.yml  _semantic_models.yml  dim_country.sql  dim_customer.sql  dim_date.sql  dim_product.sql  fct_sales.sql
dbt/models/staging/: _sources.yml  _staging.yml  stg_online_retail.sql
dbt/tests/: assert_revenue_equals_qty_times_price.sql
docker/initdb/: 01-extensions.sql  02-create-readonly-role.sh
docs/: ARCHITECTURE.md  DECISIONS.md
scripts/: generate_semantic_layer.py  introspect_schema.py  snowflake_check.py  snowflake_cortex_claude.py  snowflake_provision.py  snowflake_verify_readonly.py  test_nodes_step_by_step.py  visualize_graph.py
src/agentic_text_to_sql/: __init__.py  api.py  cli.py  config.py  ingest.py
src/agentic_text_to_sql/agent/: __init__.py  graph.py  llm.py  nodes.py  state.py  tracing.py
src/agentic_text_to_sql/db/: __init__.py  read_only_client.py  snowflake.py
src/agentic_text_to_sql/eval/: __init__.py  __main__.py  gold.py  runner.py  scoring.py
src/agentic_text_to_sql/semantic_layer/: __init__.py  build.py  embeddings.py  loader.py  retriever.py
src/agentic_text_to_sql/sql_guard/: __init__.py
terraform/: README.md
terraform/postgres/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/snowflake/: main.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_agent_loop.py  test_api.py  test_eval_gold.py  test_eval_scoring.py  test_llm_parsing.py  test_read_only_client.py  test_retriever.py  test_semantic_layer.py  test_smoke.py  test_snowflake_auth.py  test_sql_guard.py
