[project]
name = "agentic-text-to-sql"
version = "0.1.0"
description = "Safe, observable, evaluated LangGraph text-to-SQL agent over a read-only Snowflake warehouse, with in-warehouse Cortex LLMs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# Pinned to compatible-release ranges (~=) so `uv lock` produces a reproducible,
# fully-pinned uv.lock. Bump deliberately, not by accident.
dependencies = [
    "langgraph~=0.2.0",
    "langchain~=0.3.0",
    "langchain-core~=0.3.0",
    "langfuse~=2.50",
    "snowflake-connector-python[pandas]~=3.12",
    "sqlglot~=25.0",
    "pydantic~=2.8",
    "pydantic-settings~=2.4",
    "fastapi~=0.115",
    "uvicorn~=0.30",
    "gunicorn~=23.0",  # production ASGI server (with uvicorn workers) in the container
    "slowapi~=0.1.9",  # rate limiting for the /ask endpoint
    "typer~=0.12",
    "httpx~=0.27",
    "tenacity~=9.0",
    "pyyaml~=6.0",
]

[project.scripts]
ttsql = "agentic_text_to_sql.cli:app"

[dependency-groups]
dev = [
    "ruff~=0.6",
    "mypy~=1.11",
    "pytest~=8.3",
    "pytest-cov~=5.0",
    "dbt-snowflake~=1.8",
    "huggingface-hub~=0.25",
    "types-pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_text_to_sql"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: needs a live Snowflake warehouse (deselect with -m 'not integration')",
]
# Silence an upstream LangGraph/LangChain pending-deprecation emitted on import (not our code).
filterwarnings = [
    "ignore::PendingDeprecationWarning",
]
